--- a/list.css
+++ b/list.css
@@ -1,5 +1,6 @@
 body{background-color: blanchedalmond;justify-content: center;
 background-image: url("https://www.stutern.com/images/opengraph.jpg");cursor: pointer;}
 main{color:peachpuff;min-width: 500px;max-width: 1900px;min-height: 700px;max-height: 1000px;}
+ul{list-style-image: url("images/star.png");display:inline-block;}
 a{text-decoration: none;list-style-position: inside;}
 a:hover{color: red;}
